# Textual-inversion

./: .gitignore  CONTRIBUTING.md  README.md  fine_tune_via_textual_inversion.ipynb  pyproject.toml  requirements.txt
docs/: architecture.md
notebooks/: textual_inversion_demo.ipynb
src/textual_inversion/: __init__.py  config.py
src/textual_inversion/callbacks/: __init__.py  image_generator.py
src/textual_inversion/data/: dataset.py
src/textual_inversion/utils/: logger.py  visualization.py
tests/: test_config.py  test_dataset.py  test_trainer.py
