[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textual-inversion"
version = "0.1.0"
description = "Textual Inversion with Keras and Stable Diffusion"
readme = "README.md"
authors = [{ name = "Vinicius" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.15.0",
    "keras-cv==0.4.0",
    "protobuf>=3.20.0",
    "matplotlib>=3.5.0",
    "numpy>=1.22.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
